Added the ability to modify rules

--- a/app/templates/rules_editor.html
+++ b/app/templates/rules_editor.html
@@ -4,7 +4,7 @@
 
 <h2 class="mb-4">Seuils d’analyse d’images</h2>
 <!-- Flash messages (Bootstrap alerts) -->
-{% with messages = get_flashed_messages(with_categories=true) %}
+{% with messages = get_flashed_messages(with_categories=true, queue='rules') %}
   {% if messages %}
     {% for category, message in messages %}
       <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
