--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,6 +48,27 @@
             </div>
         </div>
 
+        <script>
+  (function() {
+    const header = document.querySelector('.navbar-wrapper');
+    let lastScrollY = window.pageYOffset;
+
+    window.addEventListener('scroll', () => {
+      const currentY = window.pageYOffset;
+
+      if (currentY > lastScrollY && currentY > header.offsetHeight) {
+        // scrolling down & past the header
+        header.style.top = `-${header.offsetHeight}px`;
+      } else {
+        // scrolling up
+        header.style.top = '0';
+      }
+
+      lastScrollY = currentY;
+    });
+  })();
+</script>
+
         <!-- Main Navigation -->
         <nav class="navbar navbar-expand-lg navbar-custom">
             <div class="container">
