--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -94,12 +94,14 @@
                                <i class="bi bi-clipboard-data me-1"></i> Tableau de bord
                             </a>
                         </li>
+                        {% if current_user %}
                         <li class="nav-item">
                             <a class="nav-link {{ 'active' if request.endpoint == 'main.upload' }}"
                                href="{{ url_for('main.upload') }}">
                                 <i class="bi bi-images me-1"></i> Mes images
                             </a>
                         </li>
+                        {% endif %}
                         {% if current_user and current_user.is_admin %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle {{ 'active' if request.endpoint in ['main.admin_dashboard', 'main.rules_edit'] }}" href="#" role="button"
